# QSUsers

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
env/: api.env  db.env  security.env  security.env.example
migrations/models/: 0_20241130114743_init.py  0_20250709123807_init.py  1_20241130114808_users_add_scope_column.py  1_20250709125101_users_alter_type_to_foreign_role.py  2_20241130124153_users_alter_scopes_to_type.py  2_20250709130720_users_finalize_alter_type_to_foreign_role.py  2_20250725233746_users_roles_many.py
v1/: dependencies.py  settings.py  validtors.py
v1/app/: __init__.py  auth.py  crud.py  models.py  role_scopes.py  schemas.py
v1/applications/misc/: schemas.py
v1/applications/record/: __init__.py  models.py  record_crud.py  schemas.py
v1/applications/user/: auth.py  models.py  schemas.py  user_crud.py
v1/core/: bases.py  dependencies.py  errors.py  settings.py
v1/routers/: auth.py  misc.py  record.py  roles.py  users.py
